objects/efaxapp__Sent_Fax__c.object
<CustomObject>
    <fields>
        <fullName>Guardant_360_Sample__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guardant 360 Sample #</label>
        <referenceTo>Guardant_360_Sample__c</referenceTo>
        <relationshipLabel>Sent Faxes</relationshipLabel>
        <relationshipName>Sent_Faxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Fax_Failed_Notification__c</fullName>
        <label>Primary Fax Failed Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Fax_Sent_Notification__c</fullName>
        <label>Primary Fax Sent Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Fax_Failed_Notification__c</fullName>
        <label>Secondary Fax Failed Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Secondary_Fax_Sent_Notification__c</fullName>
        <label>Secondary Fax Sent Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Recipient_Sample__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd Recipient Sample #</label>
        <referenceTo>X2nd_Recipient_Sample__c</referenceTo>
        <relationshipLabel>Sent Faxes</relationshipLabel>
        <relationshipName>Sent_Faxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>efaxapp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sent Faxes</relationshipLabel>
        <relationshipName>Sent_Faxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>efaxapp__Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Barcode_Position_Left__c</fullName>
        <label>Barcode Position from Left</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Barcode_Position_Top__c</fullName>
        <label>Barcode Position from Top</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Barcode_Size_Width__c</fullName>
        <label>Barcode Size Width</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sent Faxes</relationshipLabel>
        <relationshipName>Sent_Faxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>efaxapp__Cost_Per_Page__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost Per Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>efaxapp__DOCID__c</fullName>
        <externalId>true</externalId>
        <label>DOCID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>efaxapp__Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>efaxapp__Detailed_Fax_Status__c</fullName>
        <label>Detailed Fax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No answer</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Call placement error</fullName>
                </value>
                <value>
                    <fullName>No dial tone</fullName>
                </value>
                <value>
                    <fullName>System error</fullName>
                </value>
                <value>
                    <fullName>Fax transmission failed</fullName>
                </value>
                <value>
                    <fullName>User defined</fullName>
                </value>
                <value>
                    <fullName>Remote hang-up</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Unspecified failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>efaxapp__Fax_Number__c</fullName>
        <label>Fax Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>efaxapp__Fax_URL__c</fullName>
        <label>Fax URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Number_of_Retries__c</fullName>
        <label>Number of Retries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>efaxapp__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sent Faxes</relationshipLabel>
        <relationshipName>Sent_Faxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>efaxapp__Org_Fax_Number__c</fullName>
        <label>Organization Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>efaxapp__Parent_ID__c</fullName>
        <label>Parent ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Preview_Fax__c</fullName>
        <formula>IF(NOT(ISNULL(efaxapp__Preview_Image_URL__c)),HYPERLINK(IF(OR(ISPICKVAL($Profile.UserType,&quot;PowerCustomerSuccess&quot;),ISPICKVAL($Profile.UserType,&quot;CustomerSuccess&quot;)),&quot;/customer&quot;,&quot;&quot;)&amp; efaxapp__Fax_URL__c,IMAGE(IF(OR(ISPICKVAL($Profile.UserType,&quot;PowerCustomerSuccess&quot;),ISPICKVAL($Profile.UserType,&quot;CustomerSuccess&quot;)),&quot;/customer&quot;,&quot;&quot;)&amp;efaxapp__Preview_Image_URL__c,&quot;Sent Fax&quot;,400,400),&quot;_self&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Preview_Image_URL__c</fullName>
        <label>Preview Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Preview_Image__c</fullName>
        <formula>IF(NOT(ISNULL(efaxapp__Preview_Image_URL__c)),IMAGE(efaxapp__Preview_Image_URL__c,&quot;Sent Fax&quot;,400,400),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Send_Date__c</fullName>
        <label>Send Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>efaxapp__Sent_Date__c</fullName>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>efaxapp__Sent_With_Outbound_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent With Outbound Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>efaxapp__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sending</fullName>
                    <default>true</default>
                    <label>Sending</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Not Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>efaxapp__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efaxapp__Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>efaxapp__Total_Pages__c</fullName>
        <label>Total Pages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>efaxapp__View_Fax__c</fullName>
        <formula>HYPERLINK(IF(OR(ISPICKVAL($Profile.UserType,&quot;PowerCustomerSuccess&quot;),ISPICKVAL($Profile.UserType,&quot;CustomerSuccess&quot;)),&quot;/customer&quot;,&quot;&quot;)&amp;efaxapp__Fax_URL__c,&quot;View Fax&quot;,&quot;_blank&quot;)</formula>
        <label>View Fax</label>
        <type>Text</type>
    </fields>
    <label>Sent Fax</label>
    <listViews>
        <fullName>Not_Delivered</fullName>
        <columns>NAME</columns>
        <columns>efaxapp__Contact__c</columns>
        <columns>efaxapp__Sent_Date__c</columns>
        <columns>efaxapp__Status__c</columns>
        <columns>efaxapp__View_Fax__c</columns>
        <columns>Resend__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>efaxapp__Status__c</field>
            <operation>equals</operation>
            <value>Not Delivered</value>
        </filters>
        <filters>
            <field>Resend__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Failed Faxes that Need Retry</label>
    </listViews>
    <listViews>
        <fullName>efaxapp__All</fullName>
        <columns>NAME</columns>
        <columns>efaxapp__Send_Date__c</columns>
        <columns>efaxapp__Fax_Number__c</columns>
        <columns>efaxapp__Contact__c</columns>
        <columns>efaxapp__Status__c</columns>
        <columns>efaxapp__Subject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Sent Fax #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sent Faxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>